--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -16,6 +16,7 @@
     input {
         height: 100%;
         color: var(--black);
+        padding-right: 40px;
         font-size: 1.6rem;
         background-color: transparent;
         flex: 1;
